<rdar://problem/7016214> JSON.parse fails to parse valid JSON with most Unicode characters <https://bugs.webkit.org/show_bug.cgi?id=26802>

Reviewed by Gavin Barraclough.

In the original JSON.parse patch unicode was handled correctly, however in some last
minute "clean up" I oversimplified isSafeStringCharacter.  This patch corrects this bug.

Canonical link: https://commits.webkit.org/37039@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@45356 268f45cc-cd09-0410-ab3c-d52691b4dbfc